--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,3 @@
 .env
 
-data/grid_data.json
-data/balance.json
-data/currencies.json
-data/deposits.json
-data/ledger.json
-data/markets.json
-data/my_trades.json
-data/orders.json
+data/*
