Major update, made most of the NDAX frame into menu functions.
Moved the live_trade() function from grid to strategy.

Removed most of the print commands from exchange commands.

Reorganized the retrieved data into a more understandable file tree.

Updated the UI to just have an OHLC(V) Frame, Grid Frame, and Simulation Frame (which was split from Grid Frame)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
 .env
 
-data/*
+data/accounts/*
+data/dummy_data/*
+data/ndax/*
+data/orders/*
+data/Ripped Data/*
+data/grid_data.json
+data/ohlcv_data.json
+data/ticker_data.json
